--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,6 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+CONFIG_ZMK_KEYBOARD_ROWS=5
+CONFIG_ZMK_KEYBOARD_COLS=18
