try old config, fix enter and space

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,7 +5,7 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
-CONFIG_ZMK_KEYBOARD_ROWS=5
-CONFIG_ZMK_KEYBOARD_COLS=18
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE=y
+#CONFIG_ZMK_KEYBOARD_ROWS=5
+#CONFIG_ZMK_KEYBOARD_COLS=18
+#CONFIG_ZMK_SPLIT=y
+#CONFIG_ZMK_SPLIT_BLE=y
