--- a/build.yaml
+++ b/build.yaml
@@ -23,3 +23,5 @@ include:
     shield: corne_left
   - board: nice_nano_v2
     shield: corne_right
+  - board: nice_nano_v2
+    shield: tester_pro_micro
