--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,7 +5,7 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE=y
+# CONFIG_ZMK_SPLIT=y
+#  CONFIG_ZMK_SPLIT_BLE=y
 
-CONFIG_ZMK_KSCAN_MATRIX_POLLING=y
+# CONFIG_ZMK_KSCAN_MATRIX_POLLING=y
